boltffi_backend/tests/snapshots/swift__swift_target_renders_string_function_stack.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/string_functions\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func echoString(message: String) -> String {
    let boltffiMessageBytes = boltffiEncode { boltffiMessageWriter in boltffiMessageWriter.writeString(message) }
    return boltffiMessageBytes.withUnsafeBufferPointer { boltffiMessageBuffer in
        let boltffiResult = boltffi_function_demo_echo_string(boltffiMessageBuffer.baseAddress!, UInt(boltffiMessageBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readString() }
    }
}

public func echoStr(message: String) -> String {
    let boltffiMessageBytes = boltffiEncode { boltffiMessageWriter in boltffiMessageWriter.writeString(message) }
    return boltffiMessageBytes.withUnsafeBufferPointer { boltffiMessageBuffer in
        let boltffiResult = boltffi_function_demo_echo_str(boltffiMessageBuffer.baseAddress!, UInt(boltffiMessageBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readString() }
    }
}
