boltffi_backend/tests/snapshots/swift__swift_target_returns_primitive_direct_vectors.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"direct_vector/primitive_vector_return\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func echoValues(values: [Int32]) -> [Int32] {
    return values.withUnsafeBufferPointer { boltffiValuesBuffer in
        let boltffiResult = boltffi_function_demo_echo_values(boltffiValuesBuffer.baseAddress, UInt(boltffiValuesBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        guard boltffiResult.len > 0, let boltffiResultPtr = boltffiResult.ptr else { return [] }
        let boltffiResultCount = Int(boltffiResult.len) / MemoryLayout<Int32>.stride
        let boltffiResultRaw = UnsafeRawPointer(boltffiResultPtr).assumingMemoryBound(to: Int32.self)
        return Array(UnsafeBufferPointer(start: boltffiResultRaw, count: boltffiResultCount))
    }
}

public func echoWords(values: [UInt32]) -> [UInt32] {
    return values.withUnsafeBufferPointer { boltffiValuesBuffer in
        let boltffiResult = boltffi_function_demo_echo_words(boltffiValuesBuffer.baseAddress, UInt(boltffiValuesBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        guard boltffiResult.len > 0, let boltffiResultPtr = boltffiResult.ptr else { return [] }
        let boltffiResultCount = Int(boltffiResult.len) / MemoryLayout<UInt32>.stride
        let boltffiResultRaw = UnsafeRawPointer(boltffiResultPtr).assumingMemoryBound(to: UInt32.self)
        return Array(UnsafeBufferPointer(start: boltffiResultRaw, count: boltffiResultCount))
    }
}

public func makeRatios() -> [Double] {
    let boltffiResult = boltffi_function_demo_make_ratios()
    defer { boltffi_free_buf(boltffiResult) }
    guard boltffiResult.len > 0, let boltffiResultPtr = boltffiResult.ptr else { return [] }
    let boltffiResultCount = Int(boltffiResult.len) / MemoryLayout<Double>.stride
    let boltffiResultRaw = UnsafeRawPointer(boltffiResultPtr).assumingMemoryBound(to: Double.self)
    return Array(UnsafeBufferPointer(start: boltffiResultRaw, count: boltffiResultCount))
}
