boltffi_backend/tests/snapshots/swift__swift_target_returns_record_direct_vectors.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"direct_vector/record_vector_return\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct Point: Hashable, Equatable, Sendable {
    public var x: Double
    public var y: Double

    public init(x: Double, y: Double) {
        self.x = x
        self.y = y
    }

    @usableFromInline init(fromC c: ___Point) {
        self.init(x: c.x, y: c.y)
    }

    @usableFromInline var cValue: ___Point {
        ___Point(x: x, y: y)
    }
}

public func points() -> [Point] {
    let boltffiResult = boltffi_function_demo_points()
    defer { boltffi_free_buf(boltffiResult) }
    guard boltffiResult.len > 0, let boltffiResultPtr = boltffiResult.ptr else { return [] }
    let boltffiResultCount = Int(boltffiResult.len) / MemoryLayout<___Point>.stride
    let boltffiResultRaw = UnsafeRawPointer(boltffiResultPtr).assumingMemoryBound(to: ___Point.self)
    var boltffiResultValue: [Point] = []
    boltffiResultValue.reserveCapacity(boltffiResultCount)
    for index in 0..<boltffiResultCount {
        boltffiResultValue.append(Point(fromC: boltffiResultRaw[index]))
    }
    return boltffiResultValue
}
