boltffi_backend/tests/snapshots/swift__swift_target_splits_long_parameter_lists.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_source(SourceFixture::many([\"exports/unsigned_functions\",\n\"exports/long_parameter_class_methods\",]))"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public final class Calculator {
    private var __boltffiHandle: UInt64 = 0

    @usableFromInline var handle: UInt64 {
        get { withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_load($0)) } }
        set { __boltffiHandle = UInt64(newValue) }
    }

    @usableFromInline init(handle: UInt64) {
        self.handle = handle
    }

    @usableFromInline func __boltffiTakeHandle() -> UInt64 {
        withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_exchange($0, 0)) }
    }

    deinit {
        let handle = __boltffiTakeHandle()
        if handle != 0 { boltffi_release_class_demo_calculator(handle) }
    }

    public init() {
        self.handle = boltffi_init_class_demo_calculator_new()
    }

    public func weightedSum(
        first: Int32,
        second: Int32,
        third: Int32,
        fourth: Int32
    ) -> Int32 {
        return boltffi_method_class_demo_calculator_weighted_sum(
            self.handle,
            first,
            second,
            third,
            fourth
        )
    }
}

public func widen(
    byte: UInt8,
    short: UInt16,
    word: UInt32,
    wide: UInt64
) -> UInt32 {
    return boltffi_function_demo_widen(
        byte,
        short,
        word,
        wide
    )
}
